--- a/project-python/projeto_django/projeto_django/templates/folhinha/empresaCad.html
+++ b/project-python/projeto_django/projeto_django/templates/folhinha/empresaCad.html
@@ -7,16 +7,24 @@
 </head>
 <body>
     <div class="formularioPessoas">
-        <h2>Formulário de Informações de Pessoas</h2>
-        <h6>Feito por Cristhian F. Mendes</h6>
+        <h2>Cadastro de Empresa</h2>
         <form  id="formsave" action="/crud/addperson" method="POST">
             {% csrf_token %}
             <input style="visibility: hidden;" type="text"id="id" name="id" value=""><br>
-            <label for="first_name">Primeiro Nome:</label><br>
-            <input type="text" id="first_name" class="first_name" name="first_name"><br><br>
+            <label for="nome">Nome:</label><br>
+            <input type="text" id="nome" class="nome" name="nome"><br><br>
 
-            <label for="last_name">Último Nome:</label><br>
-            <input type="text" id="last_name" class="last_name" name="last_name"><br><br>
+            <label for="cnpj">Cnpj:</label><br>
+            <input type="text" id="cnpj" class="cnpj" name="cnpj"><br><br>
+
+            <label for="telefone">Telefone:</label><br>
+            <input type="text" id="telefone" class="telefone" name="telefone"><br><br>
+
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" class="email" name="email"><br><br>
+
+            <label for="endereco">Endereço:</label><br>
+            <input type="text" id="endereco" class="endereco" name="endereco"><br><br>
 
             <input type="submit" value="Salvar">
         </form>
@@ -26,7 +34,6 @@
     <table id="myTable">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Primeiro Nome</th>
                 <th>Sobrenome</th>
                 <th>Opções</th>
